--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,14 @@ input::-webkit-inner-spin-button {
 input[type='number'] {
   -moz-appearance: textfield;
 }
+
+/* 为行内表单内部元素设置最小宽度 */
+.pro-form.el-form--inline .el-form-item .el-form-item__content .el-input,
+.pro-form.el-form--inline .el-form-item .el-form-item__content .el-slider {
+  min-width: 220px;
+}
+
+/* 为搜索label统一宽度，防止多行时过于错乱 */
+.pro-crud-search .pro-form-item .el-form-item__label {
+  width: 90px;
+}
